# Engram-MCP

./: .gitignore  MEMORY_BANK_TEST_PLAN.md  README.md  engram_mcp.yaml.example  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  server.py  test_memory_bank.py  test_memory_bank_simple.py
.github/workflows/: tests.yml
engram_mcp/: __init__.py  chunking.py  config.py  db.py  dreaming.py  embeddings.py  generation.py  history.py  indexing.py  jobs.py  locks.py  parsing.py  search.py  security.py
tests/: test_chunking.py  test_concurrency.py  test_db.py  test_fts_query.py  test_graph.py  test_ignore_patterns.py  test_jobs.py  test_permissions.py  test_security.py
